--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Text::UnicodeTable::Simple
 
+0.03  2011-11-26
+        - add 'header' parameter to constructor
+
 0.02  2011-11-17
         - add feature 'no border'
         - add 'add_rows' method for adding row at one time
