--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension Text::UnicodeTable::Simple
 
 0.06 2011-12-31
         - Fix spell check test of author tests
-        - Fix document.
+        - Fix 'add_row_line' document.
 
 0.05 2011-12-04
         - Fix dependency.
