--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Text::UnicodeTable::Simple
 
+{{$NEXT}}
+
 0.07 2012-10-20
         - Bump Module::Install version
 
