--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Text::UnicodeTable::Simple
 
 {{$NEXT}}
+       - Convert Minilla
 
 0.07 2012-10-20
         - Bump Module::Install version
