--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Text::UnicodeTable::Simple
 
 {{$NEXT}}
+       - Add default alignment parameter
 
 0.08 2013-05-16T04:30:19Z
        - Convert Minilla
